fix(client): add overflow-x: auto to page layouts

--- a/judgels-client/src/components/FullPageLayout/FullPageLayout.scss
+++ b/judgels-client/src/components/FullPageLayout/FullPageLayout.scss
@@ -5,4 +5,5 @@
   min-height: 100vh;
   margin-left: auto;
   margin-right: auto;
+  overflow-x: auto;
 }
